--- a/CanWeFixIt/CanWeFixItService/CanWeFixItService.csproj
+++ b/CanWeFixIt/CanWeFixItService/CanWeFixItService.csproj
@@ -7,6 +7,8 @@
     <ItemGroup>
       <PackageReference Include="Dapper" Version="2.0.90" />
       <PackageReference Include="Microsoft.Data.Sqlite" Version="5.0.11" />
+      <PackageReference Include="Microsoft.EntityFrameworkCore" Version="5.0.16" />
+      <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="5.0.16" />
     </ItemGroup>
 
 </Project>
